[gd_scene load_steps=8 format=3 uid="uid://clmuqa0mj3vfy"]

[ext_resource type="Script" uid="uid://dproc6tcvsk0q" path="res://Scripts/ui.gd" id="1_ahcct"]
[ext_resource type="PackedScene" uid="uid://n8lnftxt3gyf" path="res://Scenes/UI/GameMenu/game_menu.tscn" id="2_c7mb3"]
[ext_resource type="PackedScene" uid="uid://bv8c32ujaw355" path="res://Scenes/UI/MainMenu/main_menu.tscn" id="2_de23q"]
[ext_resource type="PackedScene" uid="uid://cl5i4nwhpvekn" path="res://Scenes/UI/CreditsMenu/credits_menu.tscn" id="4_fo61o"]

[sub_resource type="Animation" id="Animation_fo61o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Transition:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_c7mb3"]
resource_name = "screen_transition"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Transition:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_alcrr"]
_data = {
&"RESET": SubResource("Animation_fo61o"),
&"screen_transition": SubResource("Animation_c7mb3")
}

[node name="UI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_ahcct")

[node name="Control" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Transition" type="ColorRect" parent="Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="GameMenu" parent="." instance=ExtResource("2_c7mb3")]
unique_name_in_owner = true
visible = false

[node name="MainMenu" parent="." instance=ExtResource("2_de23q")]
unique_name_in_owner = true
mouse_filter = 1

[node name="CreditsMenu" parent="." instance=ExtResource("4_fo61o")]
unique_name_in_owner = true
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_alcrr")
}

[connection signal="main_menu" from="GameMenu" to="." method="_on_game_menu_main_menu"]
[connection signal="return_to_game" from="GameMenu" to="." method="_on_game_menu_return_to_game"]
[connection signal="go_to_credits" from="MainMenu" to="." method="_on_main_menu_go_to_credits"]
[connection signal="start_game" from="MainMenu" to="." method="_on_main_menu_start_game"]
[connection signal="return_to_menu" from="CreditsMenu" to="." method="_on_credits_menu_return_to_menu"]
